manifests/task-manager-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-manager-backend
  template:
    metadata:
      labels:
        app: task-manager-backend
    spec:
      containers:
        - name: task-manager-backend
          image: mohamed510/task-manager-backend:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: task-manager-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
