manifests/task-manager-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-frontend-deployment
  labels:
    app: task-manager-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-manager-frontend
  template:
    metadata:
      labels:
        app: task-manager-frontend
    spec:
      containers:
        - name: task-manager-frontend
          image: mohamed510/task-manager-frontend:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: task-manager-frontend
spec:
  type: NodePort
  selector:
    app: task-manager-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31020
